# documentation_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  README_DEPLOY.md  create_vector_store.py  docker-compose.yml  download_documentation.py  entrypoint.sh  env_example.txt  pyproject.toml  query_vector_store.py  requirements.txt  topic_extractor.py  topic_extractor_gemini.py  topic_extractor_langchain.py  utilities.py  webpage_crawler.py
.github/workflows/: azure-static-web-apps-black-grass-09afb6610.yml  azure-static-web-apps-black-mushroom-04aabd610.yml  azure-static-web-apps-victorious-mushroom-08624f310.yml  docker-publish.yml
backend/: config.py  main.py  run_server.py
backend/models/: request_models.py
backend/routes/: retriever.py
core/: create_vector_store.py  download_documentation.py  retriever.py  topic_extractor.py  transfer_chromadb_to_pinecone.ipynb  utilities.py  webpage_crawler.py
core/custom_components/: custom_parsers.py
core/custom_components/custom_google_genai/: __init__.py  base.py  utils.py
custom_components/: custom_extractors.py
custom_components/custom_google_genai/: base.py
example_notebooks/: hybrid_retreiver.ipynb  vector_index_query.ipynb
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/components/: IndexRequestModal.tsx  ThemeToggle.tsx
frontend/src/app/testpage/: page.tsx
notebooks/: create_vector_store.ipynb  neo4j.ipynb  retreiver.ipynb  simple_rag.ipynb
pipeline/: retreiver.ipynb  topic_extractor.py
