[project]
name = "documentation-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai==0.6.3",
    "email-validator==2.2.0",
    "fastapi==0.115.14",
    "fastapi-cli==0.0.7",
    "google-generativeai==0.8.5",
    "gunicorn==23.0.0",
    "ipykernel==6.29.5",
    "langchain-community==0.3.26",
    "langfuse==3.1.0",
    "nbconvert==7.16.6",
    "openinference-instrumentation-llama-index==4.3.1",
    "llama-index-core==0.12.45",
    "llama-index-embeddings-google-genai==0.2.0",
    "llama-index-embeddings-huggingface==0.5.5",
    "llama-index-graph-stores-neo4j===0.4.6",
    "llama-index-llms-google-genai==0.2.2",
    "llama-index-llms-groq==0.3.2",
    "llama-index-llms-litellm==0.5.1",
    "llama-index-llms-ollama==0.6.2",
    "llama-index-llms-openai==0.4.7",
    "llama-index-llms-openai-like==0.4.0",
    "llama-index-retrievers-bm25==0.5.2",
    "llama-index-postprocessor-cohere-rerank==0.4.0",
    "llama-index-vector-stores-chroma==0.4.2",
    "llama-index-vector-stores-neo4jvector==0.3.0",
    "llama-index-vector-stores-pinecone==0.6.0",
    "nest-asyncio==1.6.0",
    "langchain-groq==0.2.1",
]
